--- a/Group_Project_002_Due_12.08.ipynb
+++ b/Group_Project_002_Due_12.08.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "id": "f4cd12d7-8aa2-4940-971c-307735ce078c",
    "metadata": {
     "tags": []
@@ -95,15 +95,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "a8896143",
    "metadata": {
     "scrolled": true,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'Preventing Ransomware Attacks at Scale.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 14\u001b[0m\n\u001b[1;32m     10\u001b[0m ity_word_count \u001b[38;5;241m=\u001b[39m {}\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m# Open Preventing Ransomeware Attacks at Scale text doc\u001b[39;00m\n\u001b[0;32m---> 14\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mPreventing Ransomware Attacks at Scale.txt\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mencoding\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mUTF-8\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m  \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m file:\n\u001b[1;32m     16\u001b[0m         \u001b[38;5;66;03m# Split line into words and clean them\u001b[39;00m\n\u001b[1;32m     17\u001b[0m         clean_words \u001b[38;5;241m=\u001b[39m [\n\u001b[1;32m     18\u001b[0m             word\u001b[38;5;241m.\u001b[39mstrip(punctuations)\u001b[38;5;241m.\u001b[39mlower()\n\u001b[1;32m     19\u001b[0m             \u001b[38;5;28;01mfor\u001b[39;00m word \u001b[38;5;129;01min\u001b[39;00m line\u001b[38;5;241m.\u001b[39msplit()\n\u001b[1;32m     20\u001b[0m         ]\n",
+      "File \u001b[0;32m~/.local/lib/python3.12/site-packages/IPython/core/interactiveshell.py:324\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    317\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[1;32m    318\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    319\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    320\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    321\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    322\u001b[0m     )\n\u001b[0;32m--> 324\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'Preventing Ransomware Attacks at Scale.txt'"
+     ]
+    }
+   ],
    "source": [
-    "# Please enter your statements here\n",
+    "import string  # string module provides useful constants and methods to work with text\n",
+    "# Define punctuation to clean words\n",
+    "punctuations = string.punctuation + '“'\n",
+    "\n",
+    "#Dictionaries to store different word counts\n",
+    "ition_word_count = {}\n",
+    "\n",
+    "ing_word_count = {}\n",
+    "\n",
+    "ity_word_count = {}\n",
+    "\n",
+    "\n",
+    "# Open Preventing Ransomeware Attacks at Scale text doc\n",
+    "with open('Preventing Ransomware Attacks at Scale.txt','r', encoding ='UTF-8')  as file:\n",
+    "    for line in file:\n",
+    "        # Split line into words and clean them\n",
+    "        clean_words = [\n",
+    "            word.strip(punctuations).lower()\n",
+    "            for word in line.split()\n",
+    "        ]\n",
+    "        \n",
+    "        # Find words ending with \"ing\"\n",
+    "        for word in clean_words:\n",
+    "            if word.endswith(\"ing\"):\n",
+    "                # Update the count in the dictionary\n",
+    "                if word in ing_word_count:\n",
+    "                    ing_word_count[word] += 1\n",
+    "                else:\n",
+    "                    ing_word_count[word] = 1\n",
+    "                    \n",
+    "items=[(count, word) for word, count in ing_word_count.items()] # items() method to get the (key, value) paris from dictionary\n",
+    "items.sort(reverse=True)# decending order by the first element, if the first element is equal, we will use the second element\n",
+    "top_10_words=[(word, count) for count, word in items[:10]]\n",
+    "\n",
+    "for word, count in top_10_words: #display the top 10 words\n",
+    "    print(f'{word}: {count}')\n",
+    "\n",
     "\n",
     " \n",
     "\n",
@@ -144,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
