Added "ity" and "ition", have not tested yet.

--- a/Group_Project_002_Due_12.08.ipynb
+++ b/Group_Project_002_Due_12.08.ipynb
@@ -145,6 +145,24 @@
     "                    ing_word_count[word] += 1\n",
     "                else:\n",
     "                    ing_word_count[word] = 1\n",
+    "        \n",
+    "        # Find words ending with \"ity\"\n",
+    "        for word in clean_words:\n",
+    "            if word.endswith(\"ity\"):\n",
+    "                # Update the count in the dictionary\n",
+    "                if word in ity_word_count:\n",
+    "                    ity_word_count[word] += 1\n",
+    "                else:\n",
+    "                    ity_word_count[word] = 1\n",
+    "\n",
+    "        # Find words ending with \"ition\"\n",
+    "        for word in clean_words:\n",
+    "            if word.endswith(\"ition\"):\n",
+    "                # Update the count in the dictionary\n",
+    "                if word in ition_word_count:\n",
+    "                    ition_word_count[word] += 1\n",
+    "                else:\n",
+    "                    ition_word_count[word] = 1\n",
     "                    \n",
     "items=[(count, word) for word, count in ing_word_count.items()] # items() method to get the (key, value) paris from dictionary\n",
     "items.sort(reverse=True)# decending order by the first element, if the first element is equal, we will use the second element\n",
