changed variables for the word counting to reflect "ing" so that we have room to add the same logic for "ity" and "ition"

--- a/Group_Project_002_Due_12.08.ipynb
+++ b/Group_Project_002_Due_12.08.ipynb
@@ -164,11 +164,11 @@
     "                else:\n",
     "                    ition_word_count[word] = 1\n",
     "                    \n",
-    "items=[(count, word) for word, count in ing_word_count.items()] # items() method to get the (key, value) paris from dictionary\n",
-    "items.sort(reverse=True)# decending order by the first element, if the first element is equal, we will use the second element\n",
-    "top_10_words=[(word, count) for count, word in items[:10]]\n",
+    "ing_items=[(count, word) for word, count in ing_word_count.items()] # items() method to get the (key, value) pairs from dictionary\n",
+    "ing_items.sort(reverse=True)# decending order by the first element, if the first element is equal, we will use the second element\n",
+    "ing_top_10_words=[(word, count) for count, word in ing_items[:10]]\n",
     "\n",
-    "for word, count in top_10_words: #display the top 10 words\n",
+    "for word, count in ing_top_10_words: #display the top 10 words\n",
     "    print(f'{word}: {count}')\n",
     "\n",
     "\n",
