Added the rest of the logic for ity and ition

--- a/Group_Project_002_Due_12.08.ipynb
+++ b/Group_Project_002_Due_12.08.ipynb
@@ -168,7 +168,21 @@
     "ing_items.sort(reverse=True)# decending order by the first element, if the first element is equal, we will use the second element\n",
     "ing_top_10_words=[(word, count) for count, word in ing_items[:10]]\n",
     "\n",
+    "ity_items=[(count, word) for word, count in ity_word_count.items()] # items() method to get the (key, value) pairs from dictionary\n",
+    "ity_items.sort(reverse=True)# decending order by the first element, if the first element is equal, we will use the second element\n",
+    "ity_top_10_words=[(word, count) for count, word in ity_items[:10]]\n",
+    "\n",
+    "ition_items=[(count, word) for word, count in ition_word_count.items()] # items() method to get the (key, value) pairs from dictionary\n",
+    "ition_items.sort(reverse=True)# decending order by the first element, if the first element is equal, we will use the second element\n",
+    "ition_top_10_words=[(word, count) for count, word in ition_items[:10]]\n",
+    "\n",
     "for word, count in ing_top_10_words: #display the top 10 words\n",
+    "    print(f'{word}: {count}')\n",
+    "\n",
+    "for word, count in ity_top_10_words: #display the top 10 words\n",
+    "    print(f'{word}: {count}')\n",
+    "\n",
+    "for word, count in ition_top_10_words: #display the top 10 words\n",
     "    print(f'{word}: {count}')\n",
     "\n",
     "\n",
