adjusted all instances of "ition" to "tion" to fit the prompt.

--- a/Group_Project_002_Due_12.08.ipynb
+++ b/Group_Project_002_Due_12.08.ipynb
@@ -121,7 +121,7 @@
     "punctuations = string.punctuation + '“'\n",
     "\n",
     "#Dictionaries to store different word counts\n",
-    "ition_word_count = {}\n",
+    "tion_word_count = {}\n",
     "\n",
     "ing_word_count = {}\n",
     "\n",
@@ -155,14 +155,14 @@
     "                else:\n",
     "                    ity_word_count[word] = 1\n",
     "\n",
-    "        # Find words ending with \"ition\"\n",
+    "        # Find words ending with \"tion\"\n",
     "        for word in clean_words:\n",
-    "            if word.endswith(\"ition\"):\n",
+    "            if word.endswith(\"tion\"):\n",
     "                # Update the count in the dictionary\n",
-    "                if word in ition_word_count:\n",
-    "                    ition_word_count[word] += 1\n",
+    "                if word in tion_word_count:\n",
+    "                    tion_word_count[word] += 1\n",
     "                else:\n",
-    "                    ition_word_count[word] = 1\n",
+    "                    tion_word_count[word] = 1\n",
     "                    \n",
     "ing_items=[(count, word) for word, count in ing_word_count.items()] # items() method to get the (key, value) pairs from dictionary\n",
     "ing_items.sort(reverse=True)# decending order by the first element, if the first element is equal, we will use the second element\n",
@@ -172,9 +172,9 @@
     "ity_items.sort(reverse=True)# decending order by the first element, if the first element is equal, we will use the second element\n",
     "ity_top_10_words=[(word, count) for count, word in ity_items[:10]]\n",
     "\n",
-    "ition_items=[(count, word) for word, count in ition_word_count.items()] # items() method to get the (key, value) pairs from dictionary\n",
-    "ition_items.sort(reverse=True)# decending order by the first element, if the first element is equal, we will use the second element\n",
-    "ition_top_10_words=[(word, count) for count, word in ition_items[:10]]\n",
+    "tion_items=[(count, word) for word, count in tion_word_count.items()] # items() method to get the (key, value) pairs from dictionary\n",
+    "tion_items.sort(reverse=True)# decending order by the first element, if the first element is equal, we will use the second element\n",
+    "tion_top_10_words=[(word, count) for count, word in tion_items[:10]]\n",
     "\n",
     "for word, count in ing_top_10_words: #display the top 10 words\n",
     "    print(f'{word}: {count}')\n",
@@ -182,7 +182,7 @@
     "for word, count in ity_top_10_words: #display the top 10 words\n",
     "    print(f'{word}: {count}')\n",
     "\n",
-    "for word, count in ition_top_10_words: #display the top 10 words\n",
+    "for word, count in tion_top_10_words: #display the top 10 words\n",
     "    print(f'{word}: {count}')\n",
     "\n",
     "\n",
