--- a/Group_Project_002_Due_12.08.ipynb
+++ b/Group_Project_002_Due_12.08.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "f4cd12d7-8aa2-4940-971c-307735ce078c",
    "metadata": {
     "tags": []
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "a8896143",
    "metadata": {
     "scrolled": true,
@@ -106,89 +106,115 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Top 10 words ending with 'ing':\n",
       "including: 3\n",
       "working: 2\n",
-      "signing: 1\n",
-      "shifting: 1\n",
-      "scripting: 1\n",
-      "scanning: 1\n",
-      "rewriting: 1\n",
+      "bearing: 1\n",
       "responding: 1\n",
+      "signing: 1\n",
       "reporting: 1\n",
-      "procuring: 1\n"
+      "creating: 1\n",
+      "coding: 1\n",
+      "damaging: 1\n",
+      "allowing: 1\n",
+      "\n",
+      "Top 10 words ending with 'ity':\n",
+      "security: 6\n",
+      "vulnerability: 6\n",
+      "cybersecurity: 4\n",
+      "community: 1\n",
+      "majority: 1\n",
+      "responsibility: 1\n",
+      "priority: 1\n",
+      "reality: 1\n",
+      "entity: 1\n",
+      "\n",
+      "Top 10 words ending with 'tion':\n",
+      "injection: 8\n",
+      "action: 2\n",
+      "authentication: 2\n",
+      "prescription: 1\n",
+      "foundation: 1\n",
+      "information: 1\n",
+      "inaction: 1\n",
+      "recommendation: 1\n"
      ]
     }
    ],
    "source": [
-    "import string  # string module provides useful constants and methods to work with text\n",
+    "import string  # For cleaning and handling punctuation in text\n",
+    "\n",
     "# Define punctuation to clean words\n",
-    "punctuations = string.punctuation + '“'\n",
+    "punctuations = string.punctuation + '“”'\n",
     "\n",
-    "#Dictionaries to store different word counts\n",
+    "# Dictionaries to store different word counts\n",
     "tion_word_count = {}\n",
-    "\n",
     "ing_word_count = {}\n",
-    "\n",
     "ity_word_count = {}\n",
     "\n",
+    "# Pseudocode:\n",
+    "# 1. Open and read the contents of 'Preventing Ransomware Attacks at Scale.txt'.\n",
+    "# 2. Iterate through each line in the text file.\n",
+    "# 3. Clean each line by removing punctuation and converting text to lowercase.\n",
+    "# 4. Identify and count words ending with specific suffixes ('tion', 'ing', 'ity').\n",
+    "# 5. Store these counts in separate dictionaries.\n",
+    "# 6. Sort and retrieve the top 10 words for each suffix.\n",
+    "# 7. Display the results in a readable format.\n",
     "\n",
-    "# Open Preventing Ransomeware Attacks at Scale text doc\n",
-    "with open('Preventing Ransomware Attacks at Scale.txt','r', encoding ='UTF-8')  as text:\n",
-    "    for line in text:\n",
-    "        # Split line into words and clean them\n",
-    "        clean_words = [\n",
-    "            word.strip(punctuations).lower()\n",
-    "            for word in line.split()\n",
-    "        ]\n",
-    "        \n",
-    "        # Find words ending with \"ing\"\n",
-    "        for word in clean_words:\n",
-    "            if word.endswith(\"ing\"):\n",
-    "                # Update the count in the dictionary\n",
-    "                if word in ing_word_count:\n",
-    "                    ing_word_count[word] += 1\n",
-    "                else:\n",
-    "                    ing_word_count[word] = 1\n",
-    "        \n",
-    "        # Find words ending with \"ity\"\n",
-    "        for word in clean_words:\n",
-    "            if word.endswith(\"ity\"):\n",
-    "                # Update the count in the dictionary\n",
-    "                if word in ity_word_count:\n",
-    "                    ity_word_count[word] += 1\n",
-    "                else:\n",
-    "                    ity_word_count[word] = 1\n",
+    "# Open the file and process it\n",
+    "try:\n",
+    "    with open('Preventing Ransomware Attacks at Scale.txt', 'r', encoding='UTF-8') as text:\n",
+    "        for line in text:\n",
+    "            # Clean and split line into words\n",
+    "            clean_words = [\n",
+    "                word.strip(punctuations).lower()\n",
+    "                for word in line.split()\n",
+    "            ]\n",
     "\n",
-    "        # Find words ending with \"tion\"\n",
-    "        for word in clean_words:\n",
-    "            if word.endswith(\"tion\"):\n",
-    "                # Update the count in the dictionary\n",
-    "                if word in tion_word_count:\n",
-    "                    tion_word_count[word] += 1\n",
-    "                else:\n",
-    "                    tion_word_count[word] = 1\n",
-    "                    \n",
-    "ing_items=[(count, word) for word, count in ing_word_count.items()] # items() method to get the (key, value) pairs from dictionary\n",
-    "ing_items.sort(reverse=True)# decending order by the first element, if the first element is equal, we will use the second element\n",
-    "ing_top_10_words=[(word, count) for count, word in ing_items[:10]]\n",
+    "            # Process words for each suffix\n",
+    "            for word in clean_words:\n",
+    "                # Words ending with 'ing'\n",
+    "                if word.endswith(\"ing\"):\n",
+    "                    ing_word_count[word] = ing_word_count.get(word, 0) + 1\n",
     "\n",
-    "ity_items=[(count, word) for word, count in ity_word_count.items()] # items() method to get the (key, value) pairs from dictionary\n",
-    "ity_items.sort(reverse=True)# decending order by the first element, if the first element is equal, we will use the second element\n",
-    "ity_top_10_words=[(word, count) for count, word in ity_items[:10]]\n",
+    "                # Words ending with 'ity'\n",
+    "                if word.endswith(\"ity\"):\n",
+    "                    ity_word_count[word] = ity_word_count.get(word, 0) + 1\n",
     "\n",
-    "tion_items=[(count, word) for word, count in tion_word_count.items()] # items() method to get the (key, value) pairs from dictionary\n",
-    "tion_items.sort(reverse=True)# decending order by the first element, if the first element is equal, we will use the second element\n",
-    "tion_top_10_words=[(word, count) for count, word in tion_items[:10]]\n",
+    "                # Words ending with 'tion'\n",
+    "                if word.endswith(\"tion\"):\n",
+    "                    tion_word_count[word] = tion_word_count.get(word, 0) + 1\n",
     "\n",
-    "for word, count in ing_top_10_words: #display the top 10 words\n",
-    "    print(f'{word}: {count}')\n",
+    "except FileNotFoundError:\n",
+    "    print(\"Error: File not found. Please ensure the file is in the correct directory.\")\n",
     "\n",
-    "for word, count in ity_top_10_words: #display the top 10 words\n",
-    "    print(f'{word}: {count}')\n",
+    "# Function to sort and retrieve top 10 words\n",
+    "def get_top_10_words(word_count_dict):\n",
+    "    # Convert dictionary to a list of tuples and sort by frequency in descending order\n",
+    "    sorted_items = sorted(word_count_dict.items(), key=sort_by_frequency, reverse=True)\n",
+    "    return sorted_items[:10]\n",
     "\n",
-    "for word, count in tion_top_10_words: #display the top 10 words\n",
-    "    print(f'{word}: {count}')\n",
+    "# Helper function for sorting\n",
+    "def sort_by_frequency(item):\n",
+    "    return item[1]\n",
     "\n",
+    "# Retrieve top 10 words for each suffix\n",
+    "ing_top_10_words = get_top_10_words(ing_word_count)\n",
+    "ity_top_10_words = get_top_10_words(ity_word_count)\n",
+    "tion_top_10_words = get_top_10_words(tion_word_count)\n",
+    "\n",
+    "# Display the results\n",
+    "print(\"Top 10 words ending with 'ing':\")\n",
+    "for word, count in ing_top_10_words:\n",
+    "    print(f\"{word}: {count}\")\n",
+    "\n",
+    "print(\"\\nTop 10 words ending with 'ity':\")\n",
+    "for word, count in ity_top_10_words:\n",
+    "    print(f\"{word}: {count}\")\n",
+    "\n",
+    "print(\"\\nTop 10 words ending with 'tion':\")\n",
+    "for word, count in tion_top_10_words:\n",
+    "    print(f\"{word}: {count}\")\n",
     "\n",
     " \n",
     "\n",
