--- a/Group_Project_002_Due_12.08.ipynb
+++ b/Group_Project_002_Due_12.08.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "f4cd12d7-8aa2-4940-971c-307735ce078c",
    "metadata": {
     "tags": []
@@ -35,22 +35,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Team No: xxx\n",
-      "Team Name: xxx\n",
-      "('Team Member1', 'Contribution'): ('Nicole', '100%')\n",
-      "('Team Member2', 'Contribution'): ('xxx', 'xx%')\n",
-      "('Team Member3', 'Contribution'): ('xxx', 'xx%')\n"
+      "Team Name: Pymatic\n",
+      "('Team Member1', 'Contribution'): ('Kevin', '27%')\n",
+      "('Team Member2', 'Contribution'): ('Jim', '25%')\n",
+      "('Team Member3', 'Contribution'): ('Carlington', '24%')\n",
+      "('Team Member4', 'Contribution'): ('Erich', '24%')\n"
      ]
     }
    ],
    "source": [
     "# please enter your team information here\n",
     "team_info = {\n",
-    "    \"Team No\": \"xxx\",\n",
-    "    \"Team Name\": \"xxx\",\n",
-    "    (\"Team Member1\", \"Contribution\"): (\"Nicole\", \"100%\"), # replace Nicole with your name, replace 100% with your contribution percentage.\n",
-    "    (\"Team Member2\", \"Contribution\"): (\"xxx\", \"xx%\"),  # remove if not applicable\n",
-    "    (\"Team Member3\", \"Contribution\"): (\"xxx\", \"xx%\")   # remove if not applicable\n",
+    "     \"Team Name\": \"Pymatic\",\n",
+    "    (\"Team Member1\", \"Contribution\"): (\"Kevin\", \"27%\"),\n",
+    "    (\"Team Member2\", \"Contribution\"): (\"Jim\", \"25%\"),  # remove if not applicable\n",
+    "    (\"Team Member3\", \"Contribution\"): (\"Carlington\", \"24%\"),   # remove if not applicable\n",
+    "    (\"Team Member4\", \"Contribution\"): (\"Erich\", \"24%\")   # remove if not applicable\n",
+    "\n",
     "}\n",
     "\n",
     "for k, v in team_info.items():\n",
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "a8896143",
    "metadata": {
     "scrolled": true,
