--- a/Group_Project_002_Due_12.08.ipynb
+++ b/Group_Project_002_Due_12.08.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "a8896143",
    "metadata": {
     "scrolled": true,
@@ -143,53 +143,40 @@
     }
    ],
    "source": [
-    "import string  # For cleaning and handling punctuation in text\n",
-    "\n",
-    "# Define punctuation to clean words\n",
+    "import string\n",
     "punctuations = string.punctuation + '“”'\n",
     "\n",
-    "# Dictionaries to store different word counts\n",
+    "# Dictionaries to store different word counts -KA\n",
     "tion_word_count = {}\n",
     "ing_word_count = {}\n",
     "ity_word_count = {}\n",
     "\n",
-    "# Pseudocode:\n",
-    "# 1. Open and read the contents of 'Preventing Ransomware Attacks at Scale.txt'.\n",
-    "# 2. Iterate through each line in the text file.\n",
-    "# 3. Clean each line by removing punctuation and converting text to lowercase.\n",
-    "# 4. Identify and count words ending with specific suffixes ('tion', 'ing', 'ity').\n",
-    "# 5. Store these counts in separate dictionaries.\n",
-    "# 6. Sort and retrieve the top 10 words for each suffix.\n",
-    "# 7. Display the results in a readable format.\n",
     "\n",
-    "# Open the file and process it\n",
-    "try:\n",
-    "    with open('Preventing Ransomware Attacks at Scale.txt', 'r', encoding='UTF-8') as text:\n",
-    "        for line in text:\n",
-    "            # Clean and split line into words\n",
-    "            clean_words = [\n",
-    "                word.strip(punctuations).lower()\n",
-    "                for word in line.split()\n",
-    "            ]\n",
+    "# Open txt document for processing -KA\n",
+    "with open('Preventing Ransomware Attacks at Scale.txt', 'r', encoding='UTF-8') as text:\n",
+    "    for line in text:\n",
+    "         # Clean and split line into words - KA\n",
+    "        clean_words = [\n",
+    "            word.strip(punctuations).lower()\n",
+    "            for word in line.split()\n",
+    "        ]\n",
     "\n",
-    "            # Process words for each suffix\n",
-    "            for word in clean_words:\n",
-    "                # Words ending with 'ing'\n",
-    "                if word.endswith(\"ing\"):\n",
-    "                    ing_word_count[word] = ing_word_count.get(word, 0) + 1\n",
+    "        # Process words for each suffix -JC\n",
+    "        for word in clean_words:\n",
+    "            # Words ending with 'ing' -JC\n",
+    "            if word.endswith(\"ing\"):\n",
+    "                ing_word_count[word] = ing_word_count.get(word, 0) + 1\n",
     "\n",
-    "                # Words ending with 'ity'\n",
-    "                if word.endswith(\"ity\"):\n",
-    "                    ity_word_count[word] = ity_word_count.get(word, 0) + 1\n",
+    "            # Words ending with 'ity' -JC\n",
+    "            if word.endswith(\"ity\"):\n",
+    "                ity_word_count[word] = ity_word_count.get(word, 0) + 1\n",
     "\n",
-    "                # Words ending with 'tion'\n",
-    "                if word.endswith(\"tion\"):\n",
-    "                    tion_word_count[word] = tion_word_count.get(word, 0) + 1\n",
+    "            # Words ending with 'tion' -JC\n",
+    "            if word.endswith(\"tion\"):\n",
+    "                tion_word_count[word] = tion_word_count.get(word, 0) + 1\n",
     "\n",
-    "except FileNotFoundError:\n",
-    "    print(\"Error: File not found. Please ensure the file is in the correct directory.\")\n",
     "\n",
-    "# Function to sort and retrieve top 10 words\n",
+    "# Function to sort and retrieve top 10 words - EM\n",
     "def get_top_10_words(word_count_dict):\n",
     "    # Convert dictionary to a list of tuples and sort by frequency in descending order\n",
     "    sorted_items = sorted(word_count_dict.items(), key=sort_by_frequency, reverse=True)\n",
