--- a/Group_Project_002_Due_12.08.ipynb
+++ b/Group_Project_002_Due_12.08.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "f4cd12d7-8aa2-4940-971c-307735ce078c",
    "metadata": {
     "tags": []
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "a8896143",
    "metadata": {
     "scrolled": true,
@@ -146,52 +146,52 @@
     "import string\n",
     "punctuations = string.punctuation + '“”'\n",
     "\n",
-    "# Dictionaries to store different word counts -KA\n",
+    "# Dictionaries to store different word counts -JC\n",
     "tion_word_count = {}\n",
     "ing_word_count = {}\n",
     "ity_word_count = {}\n",
     "\n",
     "\n",
-    "# Open txt document for processing -KA\n",
+    "# Open txt document for processing -JC\n",
     "with open('Preventing Ransomware Attacks at Scale.txt', 'r', encoding='UTF-8') as text:\n",
     "    for line in text:\n",
-    "         # Clean and split line into words - KA\n",
+    "         # Clean and split line into words -JC\n",
     "        clean_words = [\n",
     "            word.strip(punctuations).lower()\n",
     "            for word in line.split()\n",
     "        ]\n",
     "\n",
-    "        # Process words for each suffix -JC\n",
+    "        # Process words for each suffix -KA\n",
     "        for word in clean_words:\n",
-    "            # Words ending with 'ing' -JC\n",
+    "            # Words ending with 'ing' -KA\n",
     "            if word.endswith(\"ing\"):\n",
     "                ing_word_count[word] = ing_word_count.get(word, 0) + 1\n",
     "\n",
-    "            # Words ending with 'ity' -JC\n",
+    "            # Words ending with 'ity' -KA\n",
     "            if word.endswith(\"ity\"):\n",
     "                ity_word_count[word] = ity_word_count.get(word, 0) + 1\n",
     "\n",
-    "            # Words ending with 'tion' -JC\n",
+    "            # Words ending with 'tion' -KA\n",
     "            if word.endswith(\"tion\"):\n",
     "                tion_word_count[word] = tion_word_count.get(word, 0) + 1\n",
     "\n",
     "\n",
-    "# Function to sort and retrieve top 10 words - EM\n",
+    "# Function to sort and retrieve top 10 words -EM\n",
     "def get_top_10_words(word_count_dict):\n",
-    "    # Convert dictionary to a list of tuples and sort by frequency in descending order\n",
+    "    # Convert dictionary to a list of tuples and sort by frequency in descending order -EM\n",
     "    sorted_items = sorted(word_count_dict.items(), key=sort_by_frequency, reverse=True)\n",
     "    return sorted_items[:10]\n",
     "\n",
-    "# Helper function for sorting\n",
+    "# Helper function for sorting -EM\n",
     "def sort_by_frequency(item):\n",
     "    return item[1]\n",
     "\n",
-    "# Retrieve top 10 words for each suffix\n",
+    "# Retrieve top 10 words for each suffix -CM\n",
     "ing_top_10_words = get_top_10_words(ing_word_count)\n",
     "ity_top_10_words = get_top_10_words(ity_word_count)\n",
     "tion_top_10_words = get_top_10_words(tion_word_count)\n",
     "\n",
-    "# Display the results\n",
+    "# Display the results -CM\n",
     "print(\"Top 10 words ending with 'ing':\")\n",
     "for word, count in ing_top_10_words:\n",
     "    print(f\"{word}: {count}\")\n",
